# UVM-ANNS-BF16

./: .gitignore  do_cmake.sh  do_make.sh  run_pcie_profile.sh
eval/: CMakeLists.txt  overall_billion.cpp  overall_billion.cu  pcie_transfer_profile.cpp
eval/end_to_end/: deep1b.txt  deep1b_bs8.txt  sift1b.txt  sift1b_bs8.txt  text1b.txt  text1b_bs8.txt
eval/pcie_transfer_profile/: deep_energy.txt  print.sh  text_energy.txt
faiss/gpu/: CMakeLists.txt
faiss/gpu/impl/: GpuScalarQuantizer.cuh  IVFAppend.cu  IVFFlat.cu  IVFInterleaved.cuh
